endpoints: create and read comments
