# routes/routers.go
@@ -56,8 +56,8 @@ func SetupRoutes(app *fiber.App, db *gorm.DB) {
 	feedRouter.Get("/reactions/:focus/:slug", endpoint.RetrieveReactions)
 	feedRouter.Post("/reactions/:focus/:slug", endpoint.AuthMiddleware, endpoint.CreateReaction)
 	feedRouter.Delete("/reactions/:id", endpoint.AuthMiddleware, endpoint.DeleteReaction)
-	// feedRouter.Get("/posts/:slug/comments", endpoint.RetrieveComments)
-	// feedRouter.Post("/posts/:slug/comments", endpoint.AuthMiddleware, endpoint.CreateComment)
+	feedRouter.Get("/posts/:slug/comments", endpoint.RetrieveComments)
+	feedRouter.Post("/posts/:slug/comments", endpoint.AuthMiddleware, endpoint.CreateComment)
 	// feedRouter.Get("/comments/:slug", endpoint.RetrieveCommentWithReplies)
 	// feedRouter.Post("/comments/:slug", endpoint.AuthMiddleware, endpoint.CreateReply)
 	// feedRouter.Put("/comments/:slug", endpoint.AuthMiddleware, endpoint.UpdateComment)
